--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,24 @@ html,body{
 
 /**header**/
 
-header{
-    height: 80px;
-    background-color: blue;
+header .flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 header .logo{
-    width: 70px;
-    height: 70px;
-    background-color: black;
-    float: left;
+    width: 200px;
+    height: 210px;
+    background-color: #170702;    
     border-radius: 50%  ;
-    margin-left: 30px;
-    margin-top: 5px;
+    margin-top: 20px;
+    
 }
 
-header .menu{
-    float: right;
+header i {
+    float: left;
+    font-weight: lighter;
+    font-size: 15px;
 }
