--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ html,body{
     margin: 0 auto;
 }
 
+.clear{
+    clear: both;
+}
+
 
 /**header**/
 
@@ -38,3 +42,5 @@ header i {
     font-weight: lighter;
     font-size: 15px;
 }
+
+/**prços**/
