--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header .logo{
     background-color: #170702;    
     border-radius: 50%  ;
     margin-top: 20px;
+    margin-right: 110px;
     
 }
 
@@ -49,11 +50,10 @@ section.nossos-precos .flex{
     margin-top: 30px;
 }
 
-section.nossos-precos .flex h2{
+section .flex h2{
     color: ;
     text-decoration: underline;
-    transform: rotate(20deg);
-    animation: rotate 10s infinite;
+    margin-top: 20px;
     
 }
 
@@ -85,21 +85,42 @@ div.precos{
 .precos span{
     margin-left: 40px;
     font-size: 50px;
-    color: #f7f416;
+    color: #fa520a;
 }
 
+/**promoção**/
 
-
-@keyframes rotate {
-    0%{
-        transform: rotate(20deg);
-    }
-    50%{
-        transform: rotate(-20deg);
-    }
-    100%{
-        transform: rotate(20deg);
-    }
-
+.nav-galeria{
+    width: 100%;
+    height: 200px;
 }
+
+.mini-img-wraper{
+    float: left;
+    width: 25%;
+    height: 200px;
+    background-color: gray;
+    border: 1px solid black;
+}
+
+/**contato**/
+
+.back{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #170702;
+}
+
+.back p{
+    font-weight: bolder;
+    font-size: 40px;
+    text-decoration: underline;
+}
+.back i{
+    font-weight: ;
+    font-size: 40px;
+}
+
 
