--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -21,7 +21,7 @@
         <div class="clear"></div>
     </header>
 
-    <section class="pedido">
+    <section class="precos">
           <div class="cardapio"> 
             <div class="bebidas">
                 <h2>bebidas</h2>
@@ -33,7 +33,35 @@
             </div><!--comidas-->
         </div> <!--cardapio-->
         <div class="clear"></div>
-    </section><!--pedido-->
+    </section><!--precos-->
+
+    <section class="pedidos">
+        <div class="container">
+            <h2>Entre em contato e faça seu pedido </h2>
+            <form method="post">
+                <div class="form-wraper w100">
+                    <input placeholder="nome completo" required name="nome" type="text">
+                </div>
+                
+                <div class="form-wraper w100">
+                    <input placeholder="e-mail" required name="Email" type="email">
+                </div>
+            
+                <div class="form-wraper w100">
+                    <input placeholder="Telefone" required name="Telefone" type="text"oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" />
+                </div>
+                <div class="form-wraper w100">
+                    <textarea name="pedido" placeholder="especifique seu pedido"></textarea>
+                </div>
+            <div class="container">
+                <input class="btn1" type="submit"  />
+            </div>
+        </div><!--container-->
+            
+        <div class="clear"> </div>
+            </form><!--post-->
+    </section>
+
 
     <footer>
         <div class="contatos">
