--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -25,11 +25,15 @@
           <div class="cardapio"> 
             <div class="bebidas">
                 <h2>bebidas</h2>
-                <div class="img_cardapio1"></div>
+                <div class="img_cardapio">
+                    <img src="img/bebidas_1.jpeg">
+                </div>
             </div><!--bebidas-->
             <div class="comidas">
                 <h2>comidas</h2>
-                <div class="img_cardapio2"></div>
+                <div class="img_cardapio">
+                    <img src="img/cardapi_1.jpeg">
+                </div>
             </div><!--comidas-->
         </div> <!--cardapio-->
         <div class="clear"></div>
@@ -52,6 +56,13 @@
                 </div>
                 <div class="form-wraper w100">
                     <textarea name="pedido" placeholder="especifique seu pedido"></textarea>
+                </div>
+                <div class="form-wraper w100">
+                    <h3>Forma de pagamento</h3>
+                    <input placeholder="forma de pagamento" required name="pagamento" type="radio">
+                    <label for="dinheiro">dinheiro</label>
+                    <input placeholder="forma de pagamento" required name="pagamento" type="radio">
+                    <label for="pix">pix</label>
                 </div>
             <div class="container">
                 <input class="btn1" type="submit"  />
