--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_1.png');" class="mini-img"></div></div>
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_2.jpeg');" class="mini-img"></div></div>
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_3.png');" class="mini-img"></div></div>
-                <div class="mini-img-wraper maior"><div style="background-image:url('img/imagem_4.png');" class="mini-img"></div></div>
+                <div class="mini-img-wraper"><div style="background-image:url('img/imagem_4.png');" class="mini-img"></div></div>
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_5.jpeg');" class="mini-img"></div></div>
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_6.jpeg');" class="mini-img"></div></div>
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_7.jpeg');" class="mini-img"></div></div>
@@ -41,7 +41,8 @@
         </div><!--nav-galeria-->
         <div class="clear"></div>   
     </section><!--promocao-->
-    <section class="pedidos">
+    
+    <section class="fazer_pedidos">
         <div class="flex">
             <p>Osmelhores lanches da região vocé encontr aqui.
                 <br/>A padaria e pizzaria primos está sempre aberta
