--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,21 +23,7 @@
     </header>
 
     <section class="precos">
-          <div class="cardapio"> 
-            <div class="bebidas">
-                <h2>bebidas</h2>
-                <div class="img_cardapio">
-                    <img src="img/bebidas_1.jpeg">
-                </div>
-            </div><!--bebidas-->
-            <div class="comidas">
-                <h2>comidas</h2>
-                <div class="img_cardapio">
-                    <img src="img/cardapi_1.jpeg">
-                </div>
-            </div><!--comidas-->
-        </div> <!--cardapio-->
-        <div class="clear"></div>
+        
     </section><!--precos-->
 
     <section class="pedidos">
@@ -65,7 +52,7 @@
                     <label for="pix">pix</label>
                 </div>
             <div class="container">
-                <input class="btn1" type="submit"  />
+                <input class="btn1" type="submit"  /> 
             </div>
         </div><!--container-->
             
@@ -89,9 +76,8 @@
             </span>
         </div>
     </footer>
-
-
-    
-    
+    <script src="js/jquery-3.7.1.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/system.js"></script>
 </body>
 </html>
