--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     </header>
     
     <section class="promocao">
-        <div class="flex">
+        <div class="chamada">
             <p>Tá com fome de um lanchão?<br/> confira nossos preços!</p>
         </div><!--titulo-->
         <div class="nav-galeria">
@@ -39,23 +39,21 @@
                 <div class="mini-img-wraper"><div style="background-image:url('img/imagem_8.jpeg');" class="mini-img"></div></div>
             </div><!--nav-galeria-wraper-->
         </div><!--nav-galeria-->
-        <div class="clear"></div>   
     </section><!--promocao-->
-    
     <section class="fazer_pedidos">
-        <div class="flex">
-            <p>Osmelhores lanches da região vocé encontr aqui.
+        <div class="chamada">
+            <p>Os melhores lanches da região vocé encontr aqui.
                 <br/>A padaria e pizzaria primos está sempre aberta
                 <br/>para novos clientes
             </p>            
         </div>
-        <div class="clear"></div>
         <div class="confira">
-            <div class="felx">
-                <p>confira nossos sabores</p>
+            <div class="chamada">
+                <p>confira nossos sabores clicando a baixo</p>
             </div>
         </div>
         <div class="clear"></div>
+        
         <div class="desenho">
             <a href="compras"><img src="img/hamburgue.png"></a>
             <a href="compras"><img src="img/bebida.png"></a>
