--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -22,9 +22,41 @@
         <div class="clear"></div>
     </header>
 
-    <section class="precos">
+    <section class="section_slide">
+        <div class="titulo">
+            <div class="button">
+                <i class="fa-solid fa-arrow-left" id="voltar"alt="previ-button"></i> <i class="fa-solid fa-arrow-right" id="proxima" alt="next-button"></i>
+            </div><!--button-->
+            <h2>bebidas</h2>
+            <div class="button">
+                <i class="fa-solid fa-arrow-left" id="voltar_2"alt="previ-button"></i> <i class="fa-solid fa-arrow-right" id="proxima_2" alt="next-button"></i>
+            </div><!--button-->
+            <h2>comidas</h2>
+        </div><!--titulo-->
+        <div class="clear"></div>
         
-    </section><!--precos-->
+            <div class="conteiner_slide">
+                <div class="conteiner_img">
+                    <img src="img/bebidas_1.jpeg" alt="bebidas" class="slider on">
+                    <img src="img/bebidas_2.jpeg" alt="bebidas" class="slider">
+                    <img src="img/bebidas_3.jpeg" alt="bebidas" class="slider">
+                    <img src="img/bebidas_4.jpeg" alt="bebidas" class="slider">
+                    <img src="img/bebidas_5.jpeg" alt="bebidas" class="slider">
+                </div><!--titulo-->
+            </div><!--titulo-->
+
+            <div class="conteiner_slide_2">
+                <div class="conteiner_img_2">
+                    <img src="img/cardapi_1.jpeg" alt="bebidas" class="slider_2 on">
+                    <img src="img/cardapi_2.jpeg" alt="bebidas" class="slider_2">
+                    <img src="img/cardapi_3.jpeg" alt="bebidas" class="slider_2">
+                    <img src="img/cardapi_4.jpeg" alt="bebidas" class="slider_2">
+                </div><!--conteiner_img_2-->
+            </div><!--conteiner_slide_2-->
+        
+        
+        <div class="clear"></div>
+    </section>
 
     <section class="pedidos">
         <div class="container">
@@ -77,7 +109,6 @@
         </div>
     </footer>
     <script src="js/jquery-3.7.1.js"></script>
-    <script src="js/slick.js"></script>
     <script src="js/system.js"></script>
 </body>
 </html>
