--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -14,7 +14,7 @@
 <body>
     <header class="container"><!--header-->
         <div class="logo">
-            <img src="img/logo.png">
+            <a href="/"><img src="img/logo.png"></a>
             <div >
                 <p>Padaria e pizzaria<br/>primons</p>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 
                 <div class="form-wraper w100">
-                    <input placeholder="e-mail" required name="Email" type="email">
+                    <input placeholder="endereço" required name="Email" type="text">
                 </div>
             
                 <div class="form-wraper w100">
@@ -77,11 +77,6 @@
                     <textarea name="pedido" placeholder="especifique seu pedido"></textarea>
                 </div>
                 <div class="form-wraper w100">
-                    <h3>Forma de pagamento</h3>
-                    <input placeholder="forma de pagamento" required name="pagamento" type="radio">
-                    <label for="dinheiro">dinheiro</label>
-                    <input placeholder="forma de pagamento" required name="pagamento" type="radio">
-                    <label for="pix">pix</label>
                 </div>
             <div class="container">
                 <input class="btn1" type="submit"  /> 
